update lambda handler

--- a/xgboost-on-serverless-sagemaker.ipynb
+++ b/xgboost-on-serverless-sagemaker.ipynb
@@ -343,14 +343,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing lambda_handler.py\n"
+      "Overwriting lambda_handler.py\n"
      ]
     }
    ],
@@ -364,27 +364,31 @@
     "sagemaker_endpoint_name = os.environ[\"SAGEMAKER_ENDPOINT_NAME\"]\n",
     "\n",
     "def handler(event, context):\n",
-    "\n",
-    "    print(f\"making a prediction on the text: {event['body']}\")\n",
+    "    \n",
+    "    data = event[\"body\"][\"data\"]\n",
+    "    content_type = event[\"body\"][\"content_type\"]\n",
+    "    \n",
+    "    print(f\"making a prediction on the data: {data}\")\n",
     "    \n",
     "    response = runtime_client.invoke_endpoint(\n",
-    "        Body=event[\"body\"],\n",
     "        EndpointName=sagemaker_endpoint_name,\n",
-    "        Accept=\"application/json\",\n",
-    "        ContentType=\"application/json\",\n",
-    "    )\n",
-    "    \n",
-    "    print(f\"prediction: {response}\")\n",
+    "        Body=data,\n",
+    "        ContentType=content_type,\n",
     "\n",
+    "    )\n",
+    "    prediction = response[\"Body\"].read()\n",
+    "\n",
+    "    \n",
+    "    print(f\"prediction: {prediction}\")\n",
     "    return {\n",
     "        'statusCode': 200,\n",
-    "        'body': json.dumps(prediction)\n",
+    "        'body': prediction\n",
     "    }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,9 +404,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'sagemaker_model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-8728f7007e28>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_cell_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'writetemplate'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'serverless.yml'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'service: huggingface-on-serverless-sagemaker\\n\\nprovider:\\n  name: aws\\n  region: eu-west-1 \\n  runtime: python3.8\\n  iam:\\n    role:\\n      managedPolicies: arn:aws:iam::aws:policy/AdministratorAccess\\n\\n\\nfunctions:\\n  huggingface:\\n    handler: lambda_handler.handler\\n    timeout: 120\\n    memorySize: 128 \\n    events:\\n      - http:\\n          path: prediction\\n          method: post\\n    environment:\\n      SAGEMAKER_ENDPOINT_NAME: !GetAtt SageMakerEndpoint.EndpointName\\n\\nresources:\\n  Resources:\\n    SageMakerEndpointConfig:\\n      Type: AWS::SageMaker::EndpointConfig\\n      Properties:\\n        ProductionVariants:\\n          - ModelName: {sagemaker_model}\\n            InitialVariantWeight: 1.0\\n            VariantName: SageMakerModel\\n            ServerlessConfig:\\n              MaxConcurrency: 1\\n              MemorySizeInMB: 4096\\n\\n    SageMakerEndpoint:\\n      Type: AWS::SageMaker::Endpoint\\n      Properties:\\n        EndpointConfigName: !GetAtt SageMakerEndpointConfig.EndpointConfigName\\n        EndpointName: huggingface-serverless-sagemaker-endpoint\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/IPython/core/interactiveshell.py\u001b[0m in \u001b[0;36mrun_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2360\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuiltin_trap\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2361\u001b[0m                 \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mmagic_arg_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2362\u001b[0;31m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2363\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2364\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-1f7ffebb4167>\u001b[0m in \u001b[0;36mwritetemplate\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mwritetemplate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcell\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mglobals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'sagemaker_model'"
+     ]
+    }
+   ],
    "source": [
     "%%writetemplate serverless.yml\n",
     "service: huggingface-on-serverless-sagemaker\n",
@@ -472,7 +490,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "!curl -d '{\"inputs\":\"some very much wow positive text!\"}' -H \"Content-Type: application/json\" -X POST  https://2kqraqs038.execute-api.eu-west-1.amazonaws.com/dev/prediction\n"
+    "!curl -d '{\"data\":\".345,0.224414,.131102,0.042329,.279923,-0.110329,-0.099358,0.0\", \"content_type\":\"text/csv\"}' -H \"Content-Type: application/json\" -X POST  https://2kqraqs038.execute-api.eu-west-1.amazonaws.com/dev/prediction\n"
    ]
   },
   {
