--- a/xgboost-on-serverless-sagemaker.ipynb
+++ b/xgboost-on-serverless-sagemaker.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1991c171",
    "metadata": {},
    "source": [
     "# XGBoost on SageMaker Serverless Inference\n",
@@ -14,6 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "8fdcbefb",
    "metadata": {},
    "outputs": [
     {
@@ -39,6 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "f9ee6627",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +53,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9bfdca71",
    "metadata": {},
    "source": [
     "## 1. SageMaker Setup\n",
@@ -59,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "89de537d",
    "metadata": {},
    "outputs": [
     {
@@ -92,6 +97,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4ef23e9a",
    "metadata": {},
    "source": [
     "## 2. Get the dataset and store on S3"
@@ -100,6 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "9ae014f0",
    "metadata": {},
    "outputs": [
     {
@@ -119,6 +126,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8ab95340",
    "metadata": {},
    "source": [
     "Upload the Abalone dataset to the default S3 bucket."
@@ -127,6 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "01fd35b9",
    "metadata": {},
    "outputs": [
     {
@@ -144,6 +153,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee9b9684",
    "metadata": {},
    "source": [
     "## 3. Model Training"
@@ -152,6 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "a19456fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,6 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "ef56e49b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,6 +215,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df1534f7",
    "metadata": {},
    "source": [
     "Train the model on the Abalone dataset."
@@ -211,6 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "d34c1c95",
    "metadata": {},
    "outputs": [
     {
@@ -303,6 +317,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e5c2125",
    "metadata": {},
    "source": [
     "## 4. Create a Sagemaker Model"
@@ -311,6 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "755a69e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,6 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "ff068205",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,6 +346,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b90b3755",
    "metadata": {},
    "source": [
     "## 5. Create Lambda handler\n",
@@ -339,6 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "8f5d177b",
    "metadata": {},
    "outputs": [
     {
@@ -384,6 +403,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8a53b983",
    "metadata": {},
    "source": [
     "## 6. Create serverless.yml (www.serverless.com)\n",
@@ -396,6 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "8644d092",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,6 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "bbc1ee46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +471,7 @@
     "            InitialVariantWeight: 1.0\n",
     "            VariantName: SageMakerModel\n",
     "            ServerlessConfig:\n",
-    "              MaxConcurrency: 50\n",
+    "              MaxConcurrency: 1\n",
     "              MemorySizeInMB: 4096\n",
     "\n",
     "    SageMakerEndpoint:\n",
@@ -461,6 +483,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "961e5c87",
    "metadata": {},
    "source": [
     "## 7. Deploy the application using AWS cloud shell.\n",
@@ -478,15 +501,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "98eaafbb",
    "metadata": {},
    "source": [
-    "# 8. Call Endpoint\n",
-    "## First call"
+    "## 8. Call Endpoint\n",
+    "### 8.1 First call"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "87c82b18",
    "metadata": {},
    "outputs": [
     {
@@ -505,16 +530,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e4076b8b",
    "metadata": {},
    "source": [
-    "## Burst of 10 000 (Serverless Sagemaker max concurrency = 1)\n",
-    "The min latency is 57 ms, the max is 4651 ms, and the average is 139 ms.\n",
-    "0 errors"
+    "### 8.2 Burst of 10 000 (Serverless Sagemaker max concurrency = 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9965b2e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,8 +558,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bab87a66",
    "metadata": {},
    "source": [
+    "Results:\n",
+    "\n",
+    "- min latency is 32 ms\n",
+    "- max latency is 14406 ms\n",
+    "- the average is 5000 ms\n",
+    "- Only 47% was succesful\n",
+    "\n",
     "__We set the concurrency to 1, which probably caused these bad results.__"
    ]
   },
@@ -545,25 +578,42 @@
     }
    },
    "cell_type": "markdown",
+   "id": "1ab23040",
    "metadata": {},
    "source": [
     "\n",
-    "![Screen Shot 2022-02-03 at 21.49.04.png](attachment:Screen Shot 2022-02-03 at 21.49.04.png)"
+    "![assets/serverless-sagemaker-max-concurrency-1.png](assets/serverless-sagemaker-max-concurrency-1.png)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "cef3b88d",
    "metadata": {},
    "source": [
-    "## Burst of 10 000 (Serverless Sagemaker max concurrency = 50)\n",
+    "## 8.3 Burst of 10 000 (Serverless Sagemaker max concurrency = 50)\n",
     "\n",
-    "- Default max concurrency of a lambda function is 1000. \n",
-    "- serverless sagemaker max concurrency is 50"
+    "- default max concurrency of a lambda function is 1000. \n",
+    "- serverless sagemaker max concurrency is 50 \n",
+    "- we update the serverless.yml too increase the concurrency ...\n",
+    "\n",
+    "        resources:\n",
+    "        Resources:\n",
+    "            SageMakerEndpointConfig:\n",
+    "            Type: AWS::SageMaker::EndpointConfig\n",
+    "            Properties:\n",
+    "                ProductionVariants:\n",
+    "                - ModelName: {sagemaker_model}\n",
+    "                    InitialVariantWeight: 1.0\n",
+    "                    VariantName: SageMakerModel\n",
+    "                    ServerlessConfig:\n",
+    "                    MaxConcurrency: 50 # <--- set the max concurrency here\n",
+    "                    MemorySizeInMB: 4096"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "1e115932",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,21 +622,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0d576539",
    "metadata": {},
    "source": [
-    "# 4. Remove the stack\n",
+    "Results:\n",
+    "\n",
+    "- min latency is 20 ms.\n",
+    "- max latency is 7100 ms.\n",
+    "- average latency is 6500 ms when burst starts.\n",
+    "- average latency is 80 ms when burst is caught up.\n",
+    "- 100% of the requests were successful\n",
+    "\n",
+    "![assets/serverless-sagemaker-max-concurrency-1000.png](serverless-sagemaker-max-concurrency-1000.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dc69302",
+   "metadata": {},
+   "source": [
+    "## 9. Remove the stack\n",
+    "\n",
+    "go back to the AWS cloudshell and execute the below command\n",
     "\n",
     "```\n",
     "/home/cloudshell-user/node_modules/serverless/bin/serverless.js remove\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
